<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/hint_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:text="@string/data_for_enter" />

        <EditText
            android:id="@+id/username"
            android:layout_width="220dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:hint="@string/username" />

        <EditText
            android:id="@+id/password"
            android:layout_width="220dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:layout_marginTop="-16dp"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginStart="180dp"
            android:layout_marginTop="480dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:text="@string/enter" />

        <TextView
            android:id="@+id/registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/registered" />
    </LinearLayout>
</layout>